# env-make

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  README.md  sample.toml  tokimk.toml
.github/workflows/: release-env-make-cargodist.yml  release.yml
examples/: aliases.toml  env.toml  nu.rs  parse_and_print_bash.rs  parse_and_print_nu.rs  parse_and_write_nu.rs  parse_env.rs  print_nu.rs  sample.rs  serz_toml.rs  w.rs  write_nu.rs
src/: main.rs
src/lib/: bash.rs  mod.rs  nushell.rs
