[package]
name = "env-make"
version = "0.202105.6"
authors = ["fuyutarow"]
edition = "2018"

[lib]
name = 'cli'
path = 'src/lib/mod.rs'

[dependencies]
anyhow = "1.0.40"
crossbeam-utils = "0.8.4"
dirs = "3.0.2"
indexmap = { version = "1.6.2", features = ["serde"] }
parse-display = "0.4.1"
serde = "1.0.125"
serde_derive = "1.0.125"
structopt = "0.3.21"
toml = "0.5.8"
which = "4.1.0"
