[package]
name = "env-make"
version = "0.202106.1"
authors = ["fuyutarow"]
edition = "2018"
description = "A CLI tool for portable alias across shells and OS"
homepage = "https://github.com/fuyutarow/env-make"
repository = "https://github.com/fuyutarow/env-make.git"
license = "MIT"

[lib]
name = 'cli'
path = 'src/lib/mod.rs'

[dependencies]
anyhow = "1.0.40"
crossbeam-utils = "0.8.4"
directories = "3.0"
dirs = { git = "https://github.com/fuyutarow/dirs-rs" }
indexmap = { version = "1.6.2", features = ["serde"] }
parse-display = "0.4.1"
serde = "1.0.125"
serde_derive = "1.0.125"
structopt = "0.3.21"
toml = "0.5.8"
which = "4.1.0"
lazy_static = "1.4.0"
wsl = "0.1.0"
os_info = "3.0.6"
